<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="title_activity_main">I-Search</string>
    <string name="title_activity_options">Options</string>
    <string name="title_activity_results_list">Results</string>
    <string name="d">d</string>
    <string name="bf">b<small><sub>f</sub></small></string>
    <string name="tf">t<small><sub>f</sub></small></string>
    <string name="tw">t<small><sub>w</sub></small></string>
    <string name="d_e">d =</string>
    <string name="bf_e">b<small><sub>f</sub></small>" = "</string>
    <string name="tf_e">t<small><sub>f</sub></small>" = "</string>
    <string name="tw_e">t<small><sub>w</sub></small>" = "</string>
    <string name="start_year">start year</string>
    <string name="end_year">end year</string>
    <string name="year">Year Constructed</string>
    <string name="year_e">Year =</string>
    <string name="d_tolerance">d tolerance</string>
    <string name="bf_tolerance">b<small><sub>f</sub></small> tolerance</string>
    <string name="tf_tolerance">t<small><sub>f</sub></small> tolerance</string>
    <string name="tw_tolerance">t<small><sub>w</sub></small> tolerance</string>
    <string name="empty">There are no results for the values provided.</string>
    <string name="characters">"1234567890inches.- 'fto\"/"</string>
    <string name="spans">Spans</string>
    <string name="left_cantilever">Left Cantilever =</string>
    <string name="main_span">Main Span =</string>
    <string name="right_cantilever">Right Cantilever =</string>
    <string name="unbraced">Unbraced Length</string>
    <string name="top_flange">Top Flange =</string>
    <string name="bottom_flange">Bottom Flange =</string>
    <string name="yield_strength">Yield Strength (ksi) =</string>
    <string name="material_properties">Material Properties</string>
    <string name="fully_braced">"0'-0\" = Unbraced for Full Length"</string>
    <string name="code">Select a code</string>
    <string name="weak_axis">Weak Axis =</string>
    <string name="strong_axis">Strong Axis =</string>
    <string name="column_height">Column Height =</string>
    <string name="copyright">© 2013</string>
    <string name="URL"><u>www.structurx.com</u></string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_analyze">Beam 1/2</string>
    <string name="title_activity_analyze_column">Column</string>
    <string name="title_activity_analyze_beam2">Beam 2/2</string>
    <string name="title_activity_about">About</string>
</resources>
