<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <RelativeLayout android:id="@id/Container01" android:background="@drawable/layout_border" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:layout_below="@id/default_tolerances" android:layout_alignParentLeft="true">
        <LinearLayout android:id="@id/init" android:focusable="true" android:focusableInTouchMode="true" android:layout_width="0.0px" android:layout_height="0.0px">
            <requestFocus />
        </LinearLayout>
        <FrameLayout android:id="@id/frameLayout1" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_toRightOf="@id/FrameLayout2" android:layout_centerVertical="true">
            <EditText android:textSize="12.0sp" android:textColor="@color/white" android:textColorHint="@color/white" android:id="@id/d_tolerance" android:background="@drawable/rounded_edittext" android:paddingLeft="4.0dip" android:layout_width="110.0dip" android:layout_height="30.0dip" android:layout_marginTop="0.0dip" android:ems="10" android:singleLine="true" android:selectAllOnFocus="true" android:digits="@string/characters" android:inputType="textNoSuggestions" android:imeOptions="actionNext" android:nextFocusForward="@id/bf_tolerance" />
            <EditText android:textSize="12.0sp" android:textColor="@color/white" android:textColorHint="@color/white" android:id="@id/bf_tolerance" android:background="@drawable/rounded_edittext" android:paddingLeft="4.0dip" android:layout_width="110.0dip" android:layout_height="30.0dip" android:layout_marginTop="40.0dip" android:ems="10" android:singleLine="true" android:selectAllOnFocus="true" android:digits="@string/characters" android:inputType="textNoSuggestions" android:imeOptions="actionNext" android:nextFocusForward="@id/tf_tolerance" />
            <EditText android:textSize="12.0sp" android:textColor="@color/white" android:textColorHint="@color/white" android:id="@id/tf_tolerance" android:background="@drawable/rounded_edittext" android:paddingLeft="4.0dip" android:layout_width="110.0dip" android:layout_height="30.0dip" android:layout_marginTop="80.0dip" android:ems="10" android:singleLine="true" android:selectAllOnFocus="true" android:digits="@string/characters" android:inputType="textNoSuggestions" android:imeOptions="actionNext" android:nextFocusForward="@id/tw_tolerance" />
            <EditText android:textSize="12.0sp" android:textColor="@color/white" android:textColorHint="@color/white" android:id="@id/tw_tolerance" android:background="@drawable/rounded_edittext" android:paddingLeft="4.0dip" android:layout_width="110.0dip" android:layout_height="30.0dip" android:layout_marginTop="120.0dip" android:ems="10" android:singleLine="true" android:selectAllOnFocus="true" android:digits="@string/characters" android:inputType="textNoSuggestions" android:imeOptions="actionNext" android:nextFocusForward="@id/year_tolerance" />
            <EditText android:textSize="12.0sp" android:textColor="@color/white" android:textColorHint="@color/white" android:id="@id/year_tolerance" android:background="@drawable/rounded_edittext" android:paddingLeft="4.0dip" android:layout_width="110.0dip" android:layout_height="30.0dip" android:layout_marginTop="160.0dip" android:ems="10" android:singleLine="true" android:selectAllOnFocus="true" android:digits="0123456789" android:inputType="textNoSuggestions" android:imeOptions="actionDone" />
        </FrameLayout>
        <FrameLayout android:id="@id/FrameLayout2" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="5.0dip" android:layout_marginRight="5.0dip" android:layout_alignTop="@id/frameLayout1" android:layout_alignParentLeft="true">
            <TextView android:id="@id/textView1" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="0.0dip" android:text="@string/d_e" />
            <TextView android:id="@id/TextView01" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="40.0dip" android:text="@string/bf_e" />
            <TextView android:id="@id/TextView02" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="80.0dip" android:text="@string/tf_e" />
            <TextView android:id="@id/TextView03" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="120.0dip" android:text="@string/tw_e" />
            <TextView android:id="@id/TextView04" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="160.0dip" android:text="@string/year_e" />
        </FrameLayout>
    </RelativeLayout>
    <Button android:textColor="@color/black" android:id="@id/save" android:background="@drawable/rounded_button" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="15.0dip" android:layout_marginBottom="15.0dip" android:text="Save" android:width="70.0dip" android:layout_alignParentRight="true" android:layout_alignParentBottom="true" android:onClick="save_click" />
    <Button android:textSize="16.0dip" android:textColor="@color/black" android:id="@id/restore_defaults" android:background="@drawable/rounded_button" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="Restore Defaults" android:width="70.0dip" android:layout_alignLeft="@id/Container01" android:layout_alignTop="@id/save" android:layout_alignRight="@id/default_tolerances" android:onClick="restore_defaults" />
    <TextView android:textSize="18.0dip" android:textColorHint="@color/white" android:id="@id/default_tolerances" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="Tolerances  ±" android:layout_alignLeft="@id/Container01" android:layout_alignParentTop="true" />
    <RelativeLayout android:id="@id/RelativeLayout01" android:background="@drawable/layout_border" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="26.0dip" android:layout_below="@id/Container01" android:layout_alignLeft="@id/Container01" android:layout_alignRight="@id/Container01">
        <FrameLayout android:id="@id/FrameLayout02" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="5.0dip" android:layout_marginRight="5.0dip" android:layout_alignParentLeft="true" android:layout_centerVertical="true">
            <TextView android:id="@id/TextView05" android:layout_width="86.0dip" android:layout_height="wrap_content" android:text="AISC 14th Edition Method:" />
        </FrameLayout>
        <RadioGroup android:id="@id/code" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_alignParentRight="true" android:layout_centerVertical="true">
            <RadioButton android:textColor="@color/white" android:id="@id/asd" android:layout_width="wrap_content" android:layout_height="wrap_content" android:checked="true" android:text="ASD" android:onClick="button_click" />
            <RadioButton android:textColor="@color/white" android:id="@id/lrfd" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="LRFD" android:onClick="button_click" />
        </RadioGroup>
    </RelativeLayout>
    <TextView android:textSize="18.0dip" android:id="@id/textView2" android:paddingTop="5.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="Analysis/Design" android:layout_below="@id/Container01" android:layout_alignLeft="@id/RelativeLayout01" />
</RelativeLayout>