<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <RelativeLayout android:id="@id/relativeLayout1" android:layout_width="157.0dip" android:layout_height="260.0dip" android:layout_marginTop="45.0dip" android:layout_marginBottom="45.0dip" android:layout_above="@id/search" android:layout_alignParentLeft="true" android:layout_alignParentTop="true" android:layout_alignParentRight="true">
        <LinearLayout android:id="@id/init" android:focusable="true" android:focusableInTouchMode="true" android:layout_width="0.0px" android:layout_height="0.0px">
            <requestFocus />
        </LinearLayout>
        <ImageView android:id="@id/imageView1" android:background="@drawable/picture_border" android:layout_width="fill_parent" android:layout_height="50.0dip" android:src="@drawable/shape" android:layout_alignParentLeft="true" android:layout_alignParentTop="true" android:layout_alignParentRight="true" android:layout_alignParentBottom="true" android:contentDescription="W Beam" />
        <LinearLayout android:orientation="horizontal" android:id="@id/linearLayout1" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_alignParentLeft="true" android:layout_alignParentTop="true" android:layout_alignParentRight="true">
            <TextView android:id="@id/weighted1" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_weight="0.64" />
            <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_weight="0.36">
                <EditText android:textSize="12.0sp" android:textColor="@color/white" android:textColorHint="@color/white" android:gravity="center" android:id="@id/bf" android:background="@drawable/selected_edittext_dark" android:layout_width="90.0dip" android:layout_height="30.0dip" android:layout_marginTop="7.0dip" android:hint="@string/bf" android:ems="10" android:singleLine="true" android:selectAllOnFocus="true" android:maxLength="15" android:digits="@string/characters" android:inputType="textNoSuggestions" android:imeOptions="actionNext" android:nextFocusForward="@id/d" />
                <TextView android:textColor="@color/black" android:id="@id/bf_tolerance" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="30.0dip" android:text="bf_tolerance" />
            </LinearLayout>
        </LinearLayout>
        <LinearLayout android:orientation="horizontal" android:id="@id/linearLayout3" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_alignParentLeft="true" android:layout_alignParentRight="true" android:layout_alignParentBottom="true">
            <TextView android:id="@id/weighted4" android:layout_width="fill_parent" android:layout_height="68.0dip" android:layout_weight="0.42" />
            <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_weight="0.58">
                <EditText android:textSize="12.0sp" android:textColor="@color/white" android:textColorHint="@color/white" android:gravity="center" android:id="@id/tw" android:background="@drawable/rounded_edittext" android:layout_width="90.0dip" android:layout_height="30.0dip" android:hint="@string/tw" android:ems="10" android:singleLine="true" android:selectAllOnFocus="true" android:maxLength="15" android:digits="@string/characters" android:inputType="textNoSuggestions" android:imeOptions="actionNext" android:nextFocusForward="@id/year" />
                <TextView android:textColor="@color/black" android:id="@id/tw_tolerance" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="30.0dip" android:layout_marginBottom="10.0dip" android:text="tw_tolerance" />
            </LinearLayout>
        </LinearLayout>
        <LinearLayout android:id="@id/linearLayout2" android:layout_width="wrap_content" android:layout_height="65.0dip" android:layout_marginBottom="38.0dip" android:layout_above="@id/linearLayout3" android:layout_alignParentLeft="true" android:layout_alignParentRight="true">
            <LinearLayout android:orientation="vertical" android:id="@id/linearLayout4" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_weight="0.25">
                <EditText android:textSize="12.0sp" android:textColor="@color/white" android:textColorHint="@color/white" android:gravity="center" android:id="@id/d" android:background="@drawable/rounded_edittext" android:layout_width="90.0dip" android:layout_height="30.0dip" android:layout_marginLeft="10.0dip" android:hint="@string/d" android:ems="10" android:singleLine="true" android:selectAllOnFocus="true" android:maxLength="15" android:digits="@string/characters" android:inputType="textNoSuggestions" android:imeOptions="actionNext" android:nextFocusForward="@id/tf" />
                <TextView android:textColor="@color/black" android:id="@id/d_tolerance" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="30.0dip" android:text="d_tolerance" />
            </LinearLayout>
            <TextView android:id="@id/textView2" android:layout_width="fill_parent" android:layout_height="50.0dip" android:layout_weight="0.25" />
            <LinearLayout android:orientation="vertical" android:id="@id/linearLayout02" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_weight="0.25">
                <EditText android:textSize="12.0sp" android:textColor="@color/white" android:textColorHint="@color/white" android:gravity="center" android:id="@id/tf" android:background="@drawable/rounded_edittext" android:layout_width="90.0dip" android:layout_height="30.0dip" android:hint="@string/tf" android:ems="10" android:singleLine="true" android:selectAllOnFocus="true" android:maxLength="15" android:digits="@string/characters" android:inputType="textNoSuggestions" android:imeOptions="actionNext" android:nextFocusForward="@id/tw" />
                <TextView android:textColor="@color/black" android:id="@id/tf_tolerance" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="30.0dip" android:text="tf_tolerance" />
            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>
    <TextView android:textSize="20.0dip" android:id="@id/textView1" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="5.0dip" android:layout_marginTop="16.0dip" android:text="Search Criteria" android:layout_alignParentLeft="true" android:layout_alignParentTop="true" />
    <EditText android:textSize="12.0sp" android:textColor="@color/white" android:textColorHint="@color/white" android:gravity="center" android:id="@id/year" android:background="@drawable/rounded_edittext" android:layout_width="98.0dip" android:layout_height="30.0dip" android:layout_marginLeft="10.0dip" android:hint="@string/year" android:ems="10" android:singleLine="true" android:selectAllOnFocus="true" android:maxLength="4" android:digits="1234567890" android:layout_alignBaseline="@id/year_tolerance" android:layout_alignRight="@id/textView1" android:layout_alignBottom="@id/year_tolerance" android:layout_alignParentLeft="true" android:inputType="textNoSuggestions" android:imeOptions="actionDone" android:nextFocusForward="@id/search" />
    <TextView android:textColor="@color/white" android:id="@id/year_tolerance" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:text="year_tolerance" android:layout_toRightOf="@id/year" android:layout_above="@id/search" />
    <Button android:textColor="@color/black" android:id="@id/search" android:background="@drawable/rounded_button" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="15.0dip" android:layout_marginBottom="15.0dip" android:text="Search" android:width="80.0dip" android:layout_alignParentRight="true" android:layout_alignParentBottom="true" android:onClick="search_click" />
</RelativeLayout>